--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -19,6 +19,8 @@ environment:
 dependencies:
   http: ^0.12.0+2
   curved_navigation_bar: ^0.3.1
+  shared_preferences: ^0.5.4+8
+
   
   flutter:
     sdk: flutter
