--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,8 +20,8 @@ dependencies:
   http: ^0.12.0+2
   curved_navigation_bar: ^0.3.1
   shared_preferences: ^0.5.4+8
+  flutter_swiper: ^1.1.6
 
-  
   flutter:
     sdk: flutter
 
